[package]
authors = ["Andrew Smith <andrewcs149@gmail.com>"]
edition = "2018"
name = "platformer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.5.0"
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
# bevy-inspector-egui = "0.5.1"
# bevy_rapier2d = "0.10.2"
